WHUB-272: Fixed alignment issue with card icons

--- a/src/sass/components/card.scss
+++ b/src/sass/components/card.scss
@@ -28,7 +28,6 @@
 
 .card__icon {
     margin-right: 10px;
-    vertical-align: sub;
     position: relative;
     top: -1px;
 
